--- a/style.css
+++ b/style.css
@@ -85,7 +85,6 @@ nav a:hover{
 .nosotros-img{
     display: flex;
     flex-direction: row;
-    align-items: center;
     justify-content: center;
 }
 
@@ -262,13 +261,15 @@ footer{
     color: #c9b7c7;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .footer-list h3{
     font-weight: normal;
-    padding: 1rem;
     display: flex;
-    margin-right: 10px;
+    margin: 10px;
+    padding: 10px;
+    justify-content: center;
 }
 
 .footer-map #mapa:hover{
@@ -283,7 +284,7 @@ footer{
 }
 
 
-@media (max-width:1175px){
+@media (max-width:1185px){
     header{
         flex-direction: column;
     }
@@ -313,9 +314,6 @@ footer{
     nav{
         padding: 10px;
     }
-    nav a{
-        margin-right: auto;
-    }
     #MainTitle{
         font-size: 30px;
     }
@@ -326,12 +324,40 @@ footer{
     .contenido{
         margin-top: 10px;
     }
-    .nosotros-img img{
+    .nosotros-img {
         flex-direction: column;
-        width: 70px;
+        align-items: center;
+    }
+    .footer-redes {
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
+        align-items: center;
+        justify-content: center;
+    }
+    .footer-list h3 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 10px;
+        margin-right: 20px;
     }
 }
-
+@media (max-width:589px){
+    header{
+        height: 350px;
+    }
+    nav a{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+    nav a:hover{
+        border: 2px solid #c9b7c7;
+    }
+}
 @media (min-width:1200px){
     .contenido {
         padding: 20px 200px;
